--- a/Helm/opensearch/templates/ingress.yaml
+++ b/Helm/opensearch/templates/ingress.yaml
@@ -1,41 +1,38 @@
 {{- if .Values.ingress.enabled -}}
-{{- $fullName := include "opensearch.fullname" . -}}
-{{- $svcPort := .Values.service.port -}}
-{{- if semverCompare ">=1.14-0" .Capabilities.KubeVersion.GitVersion -}}
+  {{- $fullName := include "opensearch.uname" . -}}
+  {{- $servicePort := .Values.httpPort -}}
+  {{- $ingressPath := .Values.ingress.path -}}
 apiVersion: networking.k8s.io/v1beta1
-{{- else -}}
-apiVersion: extensions/v1beta1
-{{- end }}
 kind: Ingress
 metadata:
   name: {{ $fullName }}
   labels:
-    {{- include "opensearch.labels" . | nindent 4 }}
+    app: {{ .Chart.Name }}
+    release: {{ .Release.Name }}
+    heritage: {{ .Release.Service }}
   {{- with .Values.ingress.annotations }}
-  annotations:
-    {{- toYaml . | nindent 4 }}
+annotations:
+  {{ toYaml . | indent 4 }}
   {{- end }}
 spec:
   {{- if .Values.ingress.tls }}
-  tls:
-    {{- range .Values.ingress.tls }}
-    - hosts:
-        {{- range .hosts }}
-        - {{ . | quote }}
-        {{- end }}
-      secretName: {{ .secretName }}
-    {{- end }}
+tls:
+  {{- range .Values.ingress.tls }}
+- hosts:
+  {{- range .hosts }}
+  - {{ . }}
   {{- end }}
-  rules:
-    {{- range .Values.ingress.hosts }}
-    - host: {{ .host | quote }}
-      http:
-        paths:
-          {{- range .paths }}
-          - path: {{ .path }}
-            backend:
-              serviceName: {{ $fullName }}
-              servicePort: {{ $svcPort }}
-          {{- end }}
-    {{- end }}
+  secretName: {{ .secretName }}
+  {{- end }}
+  {{- end }}
+rules:
+  {{- range .Values.ingress.hosts }}
+- host: {{ . }}
+  http:
+    paths:
+      - path: {{ $ingressPath }}
+        backend:
+          serviceName: {{ $fullName }}
+          servicePort: {{ $servicePort }}
+  {{- end }}
   {{- end }}
