--- a/Helm/opensearch/templates/serviceaccount.yaml
+++ b/Helm/opensearch/templates/serviceaccount.yaml
@@ -1,12 +1,20 @@
-{{- if .Values.serviceAccount.create -}}
+{{- if .Values.rbac.create -}}
+  {{- $fullName := include "opensearch.uname" . -}}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "opensearch.serviceAccountName" . }}
-  labels:
-    {{- include "opensearch.labels" . | nindent 4 }}
-  {{- with .Values.serviceAccount.annotations }}
-  annotations:
-    {{- toYaml . | nindent 4 }}
+  {{- if eq .Values.rbac.serviceAccountName "" }}
+  name: {{ $fullName | quote }}
+  {{- else }}
+  name: {{ .Values.rbac.serviceAccountName | quote }}
   {{- end }}
-{{- end }}
+  annotations:
+    {{- with .Values.rbac.serviceAccountAnnotations }}
+      {{- toYaml . | nindent 4 }}
+      {{- end }}
+  labels:
+    heritage: {{ .Release.Service | quote }}
+    release: {{ .Release.Name | quote }}
+    chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
+    app: {{ $fullName | quote }}
+  {{- end -}}
