--- a/Helm/opensearch/values.yaml
+++ b/Helm/opensearch/values.yaml
@@ -6,32 +6,31 @@ nodeGroup: "master"
 # This should be set to clusterName + "-" + nodeGroup for your master group
 masterService: ""
 
-# opensearch roles that will be applied to this nodeGroup
+# OpenSearch roles that will be applied to this nodeGroup
 # These will be set as environment variables. E.g. node.master=true
 roles:
   master: "true"
   ingest: "true"
   data: "true"
   remote_cluster_client: "true"
-# ml: "true" # ml is not availble with opensearch-oss
 
-replicas: 3
+replicas: 1
 minimumMasterNodes: 1
 
 majorVersion: ""
 
 # Allows you to add any config files in /usr/share/opensearch/config/
 # such as opensearch.yml and log4j2.properties
-config:
+esConfig:
   opensearch.yml: |
     xpack.security.enabled: false
     xpack.security.transport.ssl.enabled: false
     xpack.security.transport.ssl.verification_mode: certificate
-    xpack.security.transport.ssl.keystore.path: /usr/share/opensearch/config/certs/elastic-certificates.p12
-    xpack.security.transport.ssl.truststore.path: /usr/share/opensearch/config/certs/elastic-certificates.p12
+    xpack.security.transport.ssl.keystore.path: /usr/share/opensearch/config/certs/opensearch-certificates.p12
+    xpack.security.transport.ssl.truststore.path: /usr/share/opensearch/config/certs/opensearch-certificates.p12
     xpack.security.http.ssl.enabled: false
-    xpack.security.http.ssl.truststore.path: /usr/share/opensearch/config/certs/elastic-certificates.p12
-    xpack.security.http.ssl.keystore.path: /usr/share/opensearch/config/certs/elastic-certificates.p12
+    xpack.security.http.ssl.truststore.path: /usr/share/opensearch/config/certs/opensearch-certificates.p12
+    xpack.security.http.ssl.keystore.path: /usr/share/opensearch/config/certs/opensearch-certificates.p12
 
 
 # Extra environment variables to append to this nodeGroup
@@ -52,10 +51,7 @@ envFrom: []
 # This is useful for mounting certificates for security and for mounting
 # the X-Pack license
 secretMounts: []
-#  - name: elastic-certificates
-#    secretName: elastic-certificates
-#    path: /usr/share/opensearch/config/certs
-#    defaultMode: 0755
+
 
 hostAliases: []
 #- ip: "127.0.0.1"
@@ -177,7 +173,7 @@ nodeAffinity: {}
 # the same time when bootstrapping the cluster
 podManagementPolicy: "Parallel"
 
-# The environment variables injected by service links are not used, but can lead to slow opensearch boot times when
+# The environment variables injected by service links are not used, but can lead to slow OpenSearch boot times when
 # there are many services in the current namespace.
 # If you experience slow pod startups you probably want to set this to `false`.
 enableServiceLinks: true
@@ -229,7 +225,6 @@ readinessProbe:
   successThreshold: 3
   timeoutSeconds: 1200
 
-# https://www.elastic.co/guide/en/opensearch/reference/7.10/cluster-health.html#request-params wait_for_status
 clusterHealthCheckParams: "wait_for_status=green&timeout=1200s"
 
 ## Use an alternate scheduler.
@@ -241,7 +236,7 @@ imagePullSecrets: []
 nodeSelector: {}
 tolerations: []
 
-# Enabling this will publically expose your opensearch instance.
+# Enabling this will publically expose your OpenSearch instance.
 # Only enable this if you have security enabled on your cluster
 ingress:
   enabled: false
@@ -259,7 +254,6 @@ ingress:
 nameOverride: ""
 fullnameOverride: ""
 
-# https://github.com/elastic/helm-charts/issues/63
 masterTerminationFix: false
 
 lifecycle: {}
@@ -273,7 +267,7 @@ lifecycle: {}
   #       - -c
   #       - |
   #         #!/bin/bash
-  #         # Add a template to adjust number of shards/replicas
+  #         # Add a template to adjust number of shards/replicas1
   #         TEMPLATE_NAME=my_template
   #         INDEX_PATTERN="logstash-*"
   #         SHARD_COUNT=8
@@ -287,7 +281,7 @@ keystore: []
 
 networkPolicy:
   ## Enable creation of NetworkPolicy resources. Only Ingress traffic is filtered for now.
-  ## In order for a Pod to access opensearch, it needs to have the following label:
+  ## In order for a Pod to access OpenSearch, it needs to have the following label:
   ## {{ template "uname" . }}-client: "true"
   ## Example for default configuration to access HTTP port:
   ## opensearch-master-http-client: "true"
@@ -295,11 +289,7 @@ networkPolicy:
   ## opensearch-master-transport-client: "true"
 
   http:
-    enabled: true
-
-  transport:
-    ## Note that all opensearch Pods can talks to themselves using transport port even if enabled.
-    enabled: true
+    enabled: false
 
 # Deprecated
 # please use the above podSecurityContext.fsGroup instead
