Change statefulset and configmap to resolve indentation issue
Signed-off-by: Dhiraj Jain <dhirajjain0@gmail.com>

--- a/Helm/opensearch/templates/configmap.yaml
+++ b/Helm/opensearch/templates/configmap.yaml
@@ -9,8 +9,8 @@ metadata:
     chart: "{{ .Chart.Name }}"
     app: "{{ template "opensearch.uname" . }}"
 data:
-  {{- range $path, $config := .Values.esConfig }}
+{{- range $path, $config := .Values.config }}
   {{ $path }}: |
-  {{ $config | indent 4 -}}
-  {{- end -}}
-  {{- end -}}
+{{ $config | indent 4 -}}
+{{- end -}}
+{{- end -}}
