--- a/Helm/opensearch/values.yaml
+++ b/Helm/opensearch/values.yaml
@@ -6,32 +6,32 @@ nodeGroup: "master"
 # This should be set to clusterName + "-" + nodeGroup for your master group
 masterService: ""
 
-# Elasticsearch roles that will be applied to this nodeGroup
+# opensearch roles that will be applied to this nodeGroup
 # These will be set as environment variables. E.g. node.master=true
 roles:
   master: "true"
   ingest: "true"
   data: "true"
   remote_cluster_client: "true"
-# ml: "true" # ml is not availble with elasticsearch-oss
+# ml: "true" # ml is not availble with opensearch-oss
 
 replicas: 3
 minimumMasterNodes: 1
 
 majorVersion: ""
 
-# Allows you to add any config files in /usr/share/elasticsearch/config/
-# such as elasticsearch.yml and log4j2.properties
+# Allows you to add any config files in /usr/share/opensearch/config/
+# such as opensearch.yml and log4j2.properties
 config:
   opensearch.yml: |
     xpack.security.enabled: false
     xpack.security.transport.ssl.enabled: false
     xpack.security.transport.ssl.verification_mode: certificate
-    xpack.security.transport.ssl.keystore.path: /usr/share/elasticsearch/config/certs/elastic-certificates.p12
-    xpack.security.transport.ssl.truststore.path: /usr/share/elasticsearch/config/certs/elastic-certificates.p12
+    xpack.security.transport.ssl.keystore.path: /usr/share/opensearch/config/certs/elastic-certificates.p12
+    xpack.security.transport.ssl.truststore.path: /usr/share/opensearch/config/certs/elastic-certificates.p12
     xpack.security.http.ssl.enabled: false
-    xpack.security.http.ssl.truststore.path: /usr/share/elasticsearch/config/certs/elastic-certificates.p12
-    xpack.security.http.ssl.keystore.path: /usr/share/elasticsearch/config/certs/elastic-certificates.p12
+    xpack.security.http.ssl.truststore.path: /usr/share/opensearch/config/certs/elastic-certificates.p12
+    xpack.security.http.ssl.keystore.path: /usr/share/opensearch/config/certs/elastic-certificates.p12
 
 
 # Extra environment variables to append to this nodeGroup
@@ -54,7 +54,7 @@ envFrom: []
 secretMounts: []
 #  - name: elastic-certificates
 #    secretName: elastic-certificates
-#    path: /usr/share/elasticsearch/config/certs
+#    path: /usr/share/opensearch/config/certs
 #    defaultMode: 0755
 
 hostAliases: []
@@ -68,7 +68,7 @@ imageTag: "latest"
 imagePullPolicy: "IfNotPresent"
 
 podAnnotations: {}
-# iam.amazonaws.com/role: es-cluster
+  # iam.amazonaws.com/role: es-cluster
 
 # additionals labels
 labels: {}
@@ -86,7 +86,7 @@ initResources: {}
   #   # memory: "128Mi"
   # requests:
   #   cpu: "25m"
-#   memory: "128Mi"
+  #   memory: "128Mi"
 
 sidecarResources: {}
   # limits:
@@ -94,7 +94,7 @@ sidecarResources: {}
   #   # memory: "128Mi"
   # requests:
   #   cpu: "25m"
-#   memory: "128Mi"
+  #   memory: "128Mi"
 
 networkHost: "0.0.0.0"
 
@@ -140,22 +140,22 @@ persistence:
 
 extraVolumes: []
   # - name: extras
-#   emptyDir: {}
+  #   emptyDir: {}
 
 extraVolumeMounts: []
   # - name: extras
   #   mountPath: /usr/share/extras
-#   readOnly: true
+  #   readOnly: true
 
 extraContainers: []
   # - name: do-something
   #   image: busybox
-#   command: ['do', 'something']
+  #   command: ['do', 'something']
 
 extraInitContainers: []
   # - name: do-something
   #   image: busybox
-#   command: ['do', 'something']
+  #   command: ['do', 'something']
 
 # This is the PriorityClass settings as defined in
 # https://kubernetes.io/docs/concepts/configuration/pod-priority-preemption/#priorityclass
@@ -177,7 +177,7 @@ nodeAffinity: {}
 # the same time when bootstrapping the cluster
 podManagementPolicy: "Parallel"
 
-# The environment variables injected by service links are not used, but can lead to slow Elasticsearch boot times when
+# The environment variables injected by service links are not used, but can lead to slow opensearch boot times when
 # there are many services in the current namespace.
 # If you experience slow pod startups you probably want to set this to `false`.
 enableServiceLinks: true
@@ -212,12 +212,12 @@ podSecurityContext:
 securityContext:
   capabilities:
     drop:
-      - ALL
+    - ALL
   # readOnlyRootFilesystem: true
   runAsNonRoot: true
   runAsUser: 1000
 
-# How long to wait for elasticsearch to stop gracefully
+# How long to wait for opensearch to stop gracefully
 terminationGracePeriod: 120
 
 sysctlVmMaxMapCount: 262144
@@ -229,7 +229,7 @@ readinessProbe:
   successThreshold: 3
   timeoutSeconds: 1200
 
-# https://www.elastic.co/guide/en/elasticsearch/reference/7.10/cluster-health.html#request-params wait_for_status
+# https://www.elastic.co/guide/en/opensearch/reference/7.10/cluster-health.html#request-params wait_for_status
 clusterHealthCheckParams: "wait_for_status=green&timeout=1200s"
 
 ## Use an alternate scheduler.
@@ -241,13 +241,13 @@ imagePullSecrets: []
 nodeSelector: {}
 tolerations: []
 
-# Enabling this will publically expose your Elasticsearch instance.
+# Enabling this will publically expose your opensearch instance.
 # Only enable this if you have security enabled on your cluster
 ingress:
   enabled: false
   annotations: {}
     # kubernetes.io/ingress.class: nginx
-  # kubernetes.io/tls-acme: "true"
+    # kubernetes.io/tls-acme: "true"
   path: /
   hosts:
     - chart-example.local
@@ -280,25 +280,25 @@ lifecycle: {}
   #         REPLICA_COUNT=1
   #         ES_URL=http://localhost:9200
   #         while [[ "$(curl -s -o /dev/null -w '%{http_code}\n' $ES_URL)" != "200" ]]; do sleep 1; done
-#         curl -XPUT "$ES_URL/_template/$TEMPLATE_NAME" -H 'Content-Type: application/json' -d'{"index_patterns":['\""$INDEX_PATTERN"\"'],"settings":{"number_of_shards":'$SHARD_COUNT',"number_of_replicas":'$REPLICA_COUNT'}}'
+  #         curl -XPUT "$ES_URL/_template/$TEMPLATE_NAME" -H 'Content-Type: application/json' -d'{"index_patterns":['\""$INDEX_PATTERN"\"'],"settings":{"number_of_shards":'$SHARD_COUNT',"number_of_replicas":'$REPLICA_COUNT'}}'
 
 
 keystore: []
 
 networkPolicy:
   ## Enable creation of NetworkPolicy resources. Only Ingress traffic is filtered for now.
-  ## In order for a Pod to access Elasticsearch, it needs to have the following label:
+  ## In order for a Pod to access opensearch, it needs to have the following label:
   ## {{ template "uname" . }}-client: "true"
   ## Example for default configuration to access HTTP port:
-  ## elasticsearch-master-http-client: "true"
+  ## opensearch-master-http-client: "true"
   ## Example for default configuration to access transport port:
-  ## elasticsearch-master-transport-client: "true"
+  ## opensearch-master-transport-client: "true"
 
   http:
     enabled: true
 
   transport:
-    ## Note that all Elasticsearch Pods can talks to themselves using transport port even if enabled.
+    ## Note that all opensearch Pods can talks to themselves using transport port even if enabled.
     enabled: true
 
 # Deprecated
