Add explicit security configuration

--- a/Helm/opensearch/templates/statefulset.yaml
+++ b/Helm/opensearch/templates/statefulset.yaml
@@ -250,6 +250,42 @@ spec:
           - name: node.{{ $role }}
             value: "{{ $enabled }}"
           {{- end }}
+          {{- if .Values.securityConfig.enabled }}
+          {{- if .Values.securityConfig.actionGroupsSecret }}
+          - mountPath: {{ .Values.securityConfig.path }}/action_groups.yml
+              name: action-groups
+              subPath: action_groups.yml
+          {{- end }}
+          {{- if .Values.securityConfig.configSecret }}
+            - mountPath: {{ .Values.securityConfig.path }}/config.yml
+            name: security-config
+            subPath: config.yml
+          {{- end }}
+          {{- if .Values.securityConfig.internalUsersSecret }}
+          - mountPath: {{ .Values.securityConfig.path }}/internal_users.yml
+            name: internal-users-config
+            subPath: internal_users.yml
+          {{- end }}
+          {{- if .Values.securityConfig.rolesSecret }}
+          - mountPath: {{ .Values.securityConfig.path }}/roles.yml
+            name: roles
+            subPath: roles.yml
+          {{- end }}
+          {{- if .Values.securityConfig.rolesMappingSecret }}
+          - mountPath: {{ .Values.securityConfig.path }}/roles_mapping.yml
+            name: role-mapping
+            subPath: roles_mapping.yml
+          {{- end }}
+          {{- if .Values.securityConfig.tenantsSecret }}
+          - mountPath: {{ .Values.securityConfig.path }}/tenants.yml
+            name: tenants
+            subPath: tenants.yml
+          {{- end }}
+          {{- if and .Values.securityConfig.config.securityConfigSecret .Values.securityConfig.config.data  }}
+          - mountPath: {{ .Values.securityConfig.path }}
+            name: security-config
+        {{- end }}
+        {{- end }}
 {{- if .Values.extraEnvs }}
 {{ toYaml .Values.extraEnvs | indent 10 }}
 {{- end }}
