Add RBAC functionality
Signed-off-by: Dhiraj Jain <dhirajjain0@gmail.com>

--- a/Helm/opensearch-dashboards/templates/deployment.yaml
+++ b/Helm/opensearch-dashboards/templates/deployment.yaml
@@ -33,9 +33,7 @@ spec:
 {{- end }}
       securityContext:
 {{ toYaml .Values.podSecurityContext | indent 8 }}
-      {{- if .Values.serviceAccount }}
-      serviceAccount: {{ .Values.serviceAccount }}
-      {{- end }}
+      serviceAccountName: {{ template "opensearch-dashboards.serviceAccountName" . }}
       {{- if .Values.hostAliases }}
       hostAliases: {{ toYaml .Values.hostAliases | nindent 6 }}
       {{- end }}
