Add YAML support for config. sysctl vm.mem fix.

--- a/Helm/opensearch/templates/configmap.yaml
+++ b/Helm/opensearch/templates/configmap.yaml
@@ -9,8 +9,8 @@ metadata:
     chart: "{{ .Chart.Name }}"
     app: "{{ template "opensearch.uname" . }}"
 data:
-{{- range $path, $config := .Values.config }}
-  {{ $path }}: |
-{{ $config | indent 4 -}}
+{{- range $configName, $configYaml := .Values.config }}
+  {{ $configName }}: |
+    {{- toYaml $configYaml | nindent 4 }}
 {{- end -}}
 {{- end -}}
