PSP False by default

--- a/Helm/opensearch/values.yaml
+++ b/Helm/opensearch/values.yaml
@@ -144,7 +144,7 @@ rbac:
   serviceAccountName: ""
 
 podSecurityPolicy:
-  create: true
+  create: false
   name: ""
   spec:
     privileged: true
