--- a/Helm/opensearch/values.yaml
+++ b/Helm/opensearch/values.yaml
@@ -24,7 +24,7 @@ majorVersion: ""
 # such as opensearch.yml and log4j2.properties
 config:
   opensearch.yml:
-    cluster.name: docker-cluster
+    cluster.name: opensearch-cluster
 
     # Bind to all interfaces because we don't know what IP address Docker will assign to us.
     network.host: 0.0.0.0
@@ -47,7 +47,10 @@ config:
             pemtrustedcas_filepath: root-ca.pem
             enforce_hostname_verification: false
           http:
-            enabled: false
+            enabled: true
+            pemcert_filepath: esnode.pem
+            pemkey_filepath: esnode-key.pem
+            pemtrustedcas_filepath: root-ca.pem
         allow_unsafe_democertificates: true
         allow_default_init_securityindex: true
         authcz:
