Address issues and comments
Signed-off-by: Dhiraj Jain <dhirajjain0@gmail.com>

--- a/Helm/opensearch-dashboards/templates/configmap.yaml
+++ b/Helm/opensearch-dashboards/templates/configmap.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.config }}
+{{- if .Values.config -}}
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -8,5 +8,5 @@ data:
 {{- range $configName, $configYaml := .Values.config }}
   {{ $configName }}: |
     {{- toYaml $configYaml | nindent 4 }}
-{{- end -}}
+{{- end }}
 {{- end -}}
