--- a/Helm/opensearch-dashboards/templates/service.yaml
+++ b/Helm/opensearch-dashboards/templates/service.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ template "opensearch-dashboards.fullname" . }}
-  labels: {{ include "opensearch-dashboards.labels" . | nindent 4 }}
+  labels: {{- include "opensearch-dashboards.labels" . | nindent 4 }}
 {{- if .Values.service.labels }}
 {{ toYaml .Values.service.labels | indent 4}}
 {{- end }}
