--- a/Helm/opensearch-dashboards/values.yaml
+++ b/Helm/opensearch-dashboards/values.yaml
@@ -1,3 +1,6 @@
+# Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.
+# SPDX-License-Identifier: Apache-2.0s
+
 # Default values for opensearch-dashboards.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
