--- a/Helm/opensearch/templates/statefulset.yaml
+++ b/Helm/opensearch/templates/statefulset.yaml
@@ -246,9 +246,13 @@ spec:
             command:
             - sh
             - -c
+            {{- if .Values.probes.readiness.acceptable_statuses }}
+            - 'curl --fail --silent -u $READINESS_USERNAME:$READINESS_PASSWORD http://localhost:9200/_cat/health | grep -P "({{ join "|" .Values.probes.readiness.acceptable_statuses }})"'
+            {{- else }}
             - 'curl --fail --silent -u $READINESS_USERNAME:$READINESS_PASSWORD http://localhost:9200/_cat/health'
-          initialDelaySeconds: 5
-          periodSeconds: 10
+            {{- end }}
+          initialDelaySeconds: {{ default 10 .Values.probes.readiness.delay }}
+          periodSeconds: {{ default 10 .Values.probes.readiness.interval }}
         {{- else if and .Values.probes.readiness.enabled .Values.probes.readiness.custom -}}
         readinessProbe:
 {{ .Values.probes.readiness.custom | toYaml | indent 10}}
@@ -260,7 +264,7 @@ spec:
         livenessProbe:
           tcpSocket:
             port: transport
-          periodSeconds: 15
+          periodSeconds: {{ default 10 .Values.probes.liveness.interval }}
         {{- end }}
         {{- if and .Values.probes.startup.enabled .Values.probes.startup.custom }}
         startupProbe:
@@ -269,8 +273,8 @@ spec:
         startupProbe:
           tcpSocket:
             port: transport
-          failureThreshold: 30
-          periodSeconds: 5
+          initialDelaySeconds: {{ default 15 .Values.probes.startup.delay }}
+          periodSeconds: {{ default 5 .Values.probes.startup.interval }}
         {{- end }}
 
         resources:
@@ -306,6 +310,30 @@ spec:
           - name: node.{{ $role }}
             value: "{{ $enabled }}"
           {{- end }}
+
+          {{- if .Values.extraEnvs }}
+{{ toYaml .Values.extraEnvs | indent 10 }}
+          {{- end }}
+        {{- if or .Values.envFrom (and .Values.probes.readiness.enabled .Values.probes.readiness.username .Values.probes.readiness.password) }}
+        envFrom:
+        {{- if and .Values.probes.readiness.enabled .Values.probes.readiness.username .Values.probes.readiness.password }}
+        - secretRef:
+            name:  {{ template "opensearch.uname" . }}-probes
+        {{- end }}
+        {{- if .Values.envFrom }}
+{{ toYaml .Values.envFrom | indent 10 }}
+        {{- end }}
+        {{- end }}
+        volumeMounts:
+          {{- if .Values.persistence.enabled }}
+          - name: "{{ template "opensearch.uname" . }}"
+            mountPath: /usr/share/opensearch/data
+          {{- end }}
+          {{- if .Values.keystore }}
+          - name: keystore
+            mountPath: /usr/share/opensearch/config/opensearch.keystore
+            subPath: opensearch.keystore
+          {{- end }}
           {{- if .Values.securityConfig.enabled }}
           {{- if .Values.securityConfig.actionGroupsSecret }}
           - mountPath: {{ .Values.securityConfig.path }}/action_groups.yml
@@ -313,7 +341,7 @@ spec:
               subPath: action_groups.yml
           {{- end }}
           {{- if .Values.securityConfig.configSecret }}
-            - mountPath: {{ .Values.securityConfig.path }}/config.yml
+          - mountPath: {{ .Values.securityConfig.path }}/config.yml
             name: security-config
             subPath: config.yml
           {{- end }}
@@ -340,29 +368,9 @@ spec:
           {{- if and .Values.securityConfig.config.securityConfigSecret .Values.securityConfig.config.data  }}
           - mountPath: {{ .Values.securityConfig.path }}
             name: security-config
-        {{- end }}
-        {{- end }}
-{{- if .Values.extraEnvs }}
-{{ toYaml .Values.extraEnvs | indent 10 }}
-{{- end }}
-{{- if .Values.envFrom }}
-        envFrom:
-        {{- if and .Values.probes.readiness.enabled .Values.probes.readiness.username .Values.probes.readiness.password }}
-        - secretRef:
-          name:  {{ template "opensearch.uname" . }}-probes
-        {{- end }}
-{{ toYaml .Values.envFrom | indent 10 }}
-{{- end }}
-        volumeMounts:
-          {{- if .Values.persistence.enabled }}
-          - name: "{{ template "opensearch.uname" . }}"
-            mountPath: /usr/share/opensearch/data
           {{- end }}
-{{ if .Values.keystore }}
-          - name: keystore
-            mountPath: /usr/share/opensearch/config/opensearch.keystore
-            subPath: opensearch.keystore
-{{ end }}
+          {{- end }}
+
           {{- range .Values.secretMounts }}
           - name: {{ .name }}
             mountPath: {{ .path }}
