--- a/Helm/opensearch/values.yaml
+++ b/Helm/opensearch/values.yaml
@@ -340,8 +340,8 @@ probes:
     username: admin
     password: admin
     # This adjusts the readiness check to require certain statuses, you may want this on your data nodes to ensure nodes are only restarted when they are fully healed
-    acceptable_statuses: []
-    # acceptable_statuses: ["green", "yellow"]
+    acceptableStatuses: []
+    # acceptableStatuses: ["green", "yellow"]
     # A custom check can be passed in below, if username and password are set then can be used as described in default
     # custom:
     #   exec:
